# embassy-gd32

./: Cargo.toml  LICENSE-MIT  README.md
.zed/: settings.json
examples/: embassy-time-smoke.rs
scripts/: sync-gd32-rs.sh
src/: generic.rs  lib.rs  time_driver.rs  time_driver_gd32f425.rs  time_driver_gd32f425_tim2.rs
src/gd32c103/: adc1.rs  bkp.rs  exti.rs  i2c0.rs  mod.rs  uart3.rs  usart0.rs  usbfs_global.rs
src/gd32c113/: can0.rs  fmc.rs  mod.rs
src/gd32e103/: exmc.rs  mod.rs  timer9.rs
src/gd32e230/: adc.rs  dma.rs  fwdgt.rs  i2c0.rs  mod.rs  rtc.rs  spi1.rs  timer0.rs  timer13.rs  timer14.rs  timer2.rs  usart0.rs
src/gd32e231/: crc.rs  fmc.rs  gpioc.rs  mod.rs  rcu.rs  spi0.rs  syscfg.rs  timer15.rs  timer5.rs
src/gd32e503/: adc0.rs  bkp.rs  crc.rs  dac.rs  dma1.rs  fmc.rs  i2c2.rs  master_timer.rs  mod.rs  pmu.rs  rcu.rs  slave_timer0.rs  spi0.rs  timer2.rs  usart5.rs  usbd.rs
src/gd32e505/: can1.rs  dbg.rs  gpioc.rs  mod.rs  shrtimer_common.rs  slave_timer3.rs  uart3.rs
src/gd32e507/: can2.rs  cmp.rs  dma0.rs  i2c0.rs  mod.rs  rcu.rs  slave_timer1.rs  slave_timer2.rs  sqpi.rs  timer12.rs  tmu.rs  usbhs_device.rs
src/gd32e508/: afio.rs  mod.rs  slave_timer4.rs  usart0.rs  usbgs_host.rs  usbhs_global.rs
src/gd32f130/: adc.rs  cec.rs  fmc.rs  mod.rs  rcu.rs  rtc.rs  spi0.rs  syscfg.rs  timer0.rs  timer1.rs
src/gd32f150/: dac.rs  gpiod.rs  gpiof.rs  i2c0.rs  mod.rs  opa_ivref.rs  timer13.rs  timer14.rs  timer15.rs  timer5.rs  usart0.rs  usbd.rs
src/gd32f170/: can0.rs  cmp.rs  dbg.rs  dma.rs  fwdgt.rs  i2c0.rs  mod.rs  rcu.rs  slcd.rs  spi0.rs  timer1.rs  timer15.rs
src/gd32f190/: adc.rs  crc.rs  dac.rs  gpiob.rs  mod.rs  opa_ivref.rs  timer0.rs  tsi.rs  (+2 more)
(+2848 files in other folders)
