[package]
name = "embassy-gd32"
version = "0.1.0"
edition = "2021"



[dependencies]
vcell = "0.1.3"
cortex-m = "0.7.7"
embassy-time-queue-utils = { version = "0.3.0", optional = true }

[dependencies.embassy-time-driver]
version = "0.2.1"
features = ["tick-hz-1_000_000"]
optional = true

[dependencies.cortex-m-rt]
optional = true
version = "0.7.5"

[dependencies.critical-section]
optional = true
version = "1.1.2"

[dev-dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.5.0"
panic-probe = "1.0.0"
rtt-target = "0.6.2"

[features]
default = []
rt = ["cortex-m-rt/device"]
gd32c103 = []
gd32c113 = []
gd32e103 = []
gd32e230 = []
gd32e231 = []
gd32e503 = []
gd32e505 = []
gd32e507 = []
gd32e508 = []
gd32f130 = []
gd32f150 = []
gd32f170 = []
gd32f190 = []
gd32f205 = []
gd32f207 = []
gd32f303 = []
gd32f305 = []
gd32f307 = []
gd32f403 = []
gd32f425 = ["critical-section", "embassy-time-driver", "embassy-time-queue-utils"]
